kubernetes/apps/productivity/planka/config/http-route-internal.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: planka-internal
  namespace: productivity
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: http
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - planka.krapulax.home
  rules:
    - backendRefs:
        - name: planka-app
          namespace: productivity
          port: 80
