kubernetes/apps/productivity/planka/config/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: planka
  namespace: productivity
  annotations:
    external-dns.alpha.kubernetes.io/hostname: planka.krapulax.dev
    external-dns.alpha.kubernetes.io/target: external.krapulax.dev
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Productivity
    gethomepage.dev/name: Planka
    gethomepage.dev/icon: planka.png
    gethomepage.dev/description: Kanban project planning
    gethomepage.dev/weight: "15"
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - planka.krapulax.dev
  rules:
    - backendRefs:
        - name: planka-app
          namespace: productivity
          port: 80
